Fixed responsive layout slider on mobile

--- a/src/_sass/osqp/_layout.scss
+++ b/src/_sass/osqp/_layout.scss
@@ -97,6 +97,13 @@ text-align: left;
 .slider img {
 	display:block;
 	margin: auto;
+	height: 80px;
+//         @include media-breakpoint-up(md) {
+//         height: 100px;
+// }
+	@include media-breakpoint-up(lg) {
+	height: 100px;
+}
 	//   background: #3A6F9A;
 	// vertical-align: middle;
 	// max-height: 100px;
